# nrf24l01_4418

./: .gitignore  README.md
app/: CMakeLists.txt
app/include/: list.h  nrf24l01.h
app/src/: list.c  nrf24l01.c  nrf_rx.c  nrf_tx.c  test.c
driver/: .nrf24l01.ko.cmd  .nrf24l01.mod.o.cmd  .nrf24l01.o.cmd  .nrf24l01_dev.ko.cmd  .nrf24l01_dev.mod.o.cmd  .nrf24l01_dev.o.cmd  .test_work.ko.cmd  .test_work.mod.o.cmd  .test_work.o.cmd  Makefile  modules.order  nrf24l01.c  nrf24l01.h  nrf24l01.ko  nrf24l01_dev.c  nrf24l01_dev.ko  test_work.c  test_work.ko
driver/.tmp_versions/: nrf24l01.mod  nrf24l01_dev.mod  test_work.mod
readme/: company_file.c  引脚.txt  数据手册.txt  遇到的问题.txt
second/: CMakeLists.txt  README.txt
second/include/: cmd.h  file.h  list.h  mytime.h  nrf24l01.h  nrf_client.h  nrf_server.h  pack.h  system.h
second/src/: cmd.cpp  list.cpp  mytime.cpp  nrf24l01.cpp  nrf_client.cpp  nrf_print_reg.c  nrf_server.cpp  pack.cpp
单片机程序和手册/: README.txt  app1_tx.c  list.c
单片机程序和手册/FWLib/: STC15Fxxxx.H  config.h  delay.c  typedef.h
单片机程序和手册/SI24R1/: SI24R1.c  SI24R1.h
单片机程序和手册/USER/: SI24R1.uvgui.BAT09_1  SI24R1.uvopt  SI24R1.uvproj  main.c
单片机程序和手册/USER/listing/: SI24R1.lst  SI24R1.m51  delay.lst  main.lst
单片机程序和手册/USER/output/: SI24R1  SI24R1.hex  SI24R1.lnp  SI24R1.plg
